fixed empty cart text alignment and remove buttons alignment on iOS

--- a/app/styles/_cart.scss
+++ b/app/styles/_cart.scss
@@ -64,11 +64,17 @@
   border: 1px solid $text-color;
   width: 28px;
   height: 28px;
+  padding: 5px;
   color: $text-color;
   line-height: 1rem;
   margin-top: -10px;
+  font-size: .8rem;
 
   @media screen and (min-width: 35.5em) and (max-width: 767px) {
     margin-top: 3px;
   }
+}
+
+.empty-text {
+  text-align: center;
 }
